--- a/packages/uni-automator/package.json
+++ b/packages/uni-automator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-automator",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "uni-app automator",
   "main": "dist/index.js",
   "repository": {
