--- a/packages/uni-migration/package.json
+++ b/packages/uni-migration/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-migration",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "uni-app migration",
   "main": "lib/index.js",
   "repository": {
