--- a/packages/uni-mp-qq/package.json
+++ b/packages/uni-mp-qq/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-qq",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "uni-app mp-qq",
   "main": "dist/index.js",
   "repository": {
