--- a/packages/uni-quickapp-native/package.json
+++ b/packages/uni-quickapp-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-quickapp-native",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "uni-app quickapp-native",
   "main": "dist/vue.prod.js",
   "repository": {
