--- a/packages/uni-stat/package.json
+++ b/packages/uni-stat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-stat",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "",
   "main": "dist/index.js",
   "repository": {
