--- a/packages/vue-cli-plugin-uni-optimize/package.json
+++ b/packages/vue-cli-plugin-uni-optimize/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/vue-cli-plugin-uni-optimize",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "uni-app optimize plugin for vue-cli 3",
   "main": "index.js",
   "repository": {
