--- a/packages/webpack-uni-pages-loader/package.json
+++ b/packages/webpack-uni-pages-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/webpack-uni-pages-loader",
-  "version": "2.0.0-alpha-29920201113004",
+  "version": "2.0.1-alpha-29920201113004.0",
   "description": "uni-app pages.json loader",
   "main": "lib/index.js",
   "repository": {
